syntax = "proto3";

package api.rpc_common.v1;

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply
import "paginator/paginator.proto";

option go_package = "fkratos/api/rpc_common/v1;v1";

// 敏感词
service SensitiveWord {
  //敏感词-列表
  rpc SensitiveWordList(SensitiveWordListReq) returns (SensitiveWordListReply);
  //敏感词-保存
  rpc SensitiveWordStore(SensitiveWordStoreReq) returns (SensitiveWordStoreReply);
  //敏感词-删除
  rpc SensitiveWordDel(SensitiveWordDelReq) returns (SensitiveWordDelReply);
  //敏感词-检测
  rpc SensitiveWordCheck(SensitiveWordCheckReq) returns (SensitiveWordCheckResp);
}
message SensitiveWordInfo {
  string id = 1; //ID
  string word = 2; //敏感词
  repeated string labs = 3; //标签
  string desc = 4; //描述
  string createdAt = 5; //创建时间
  string updatedAt = 6; //更新时间
}

//请求-敏感词-列表
message SensitiveWordListReq {
  paginator.PaginatorReq paginator = 1; //分页
}

//响应-敏感词-列表
message SensitiveWordListReply {
  repeated SensitiveWordInfo list = 1; //敏感词列表
  paginator.PaginatorReply paginator = 2; //分页
}

//请求-敏感词-保存
message SensitiveWordStoreReq {
  string id = 1; //ID
  string word = 2; //敏感词
  repeated string labs = 3; //标签
  string desc = 4; //描述
}

//响应-敏感词-保存
message SensitiveWordStoreReply {}

//请求-敏感词-删除
message SensitiveWordDelReq {
  repeated string ids = 1; //ID集合
}

//响应-敏感词-删除
message SensitiveWordDelReply {}

//请求-敏感词-检测
message SensitiveWordCheckReq {
  string Word = 1; //词语
}

//响应-敏感词-检测
message SensitiveWordCheckResp {
  bool Result = 1; //是否有敏感词
  string Replace = 2; //替换后词语
  string Filter = 3; //过滤后词语
}
